--- a/Develop/index.html
+++ b/Develop/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <header>
       <h1>Hori<span class="seo">seo</span>n</h1>
 
       <!--This notates the navigation panel for clickable links-->
