--- a/Develop/index.html
+++ b/Develop/index.html
@@ -109,7 +109,7 @@
       </section>
     </aside>
 
-    <footer class="footer">
+    <footer>
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </footer>
